--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "@ktny/ccstat",
-  "version": "1.0.0",
+  "name": "ccstat",
+  "version": "2.0.2",
   "description": "CLI tool that analyzes Claude Code session history and visualizes project activity patterns in a timeline format",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/cli/index.js",
   "bin": {
-    "ccstat": "./dist/index.js"
+    "ccstat": "./dist/cli/index.js"
   },
   "scripts": {
     "dev": "tsx src/cli/index.ts",
-    "dev:days": "tsx src/cli/index.ts --days 2",
-    "dev:hours": "tsx src/cli/index.ts --hours 6",
-    "build": "npm run clean:dist && tsc --outDir dist --target ES2022 --module ESNext --moduleResolution Bundler --allowSyntheticDefaultImports --esModuleInterop && cp dist/cli/index.js dist/index.js && node scripts/fix-esm-imports.js",
+    "build": "tsdown",
     "build:prod": "npm run build && npm run package",
     "package": "pkg dist/index.js --out-path bin --targets node18-linux-x64,node18-macos-x64,node18-win-x64 --compress GZip",
     "clean:dist": "rm -rf dist",
     "prepublishOnly": "npm run check && npm run build",
     "prepack": "npm run build",
-    "start": "node dist/index.js",
+    "start": "node dist/cli/index.js",
     "test": "jest --passWithNoTests",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -83,6 +81,7 @@
     "prettier": "^3.2.0",
     "semantic-release": "^24.2.6",
     "ts-jest": "^29.1.0",
+    "tsdown": "^0.12.9",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   },
